--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "events": "^3.3.0"
   },
   "devDependencies": {
-    "webpack": "^5.45.1"
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2"
   }
 }
